<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ffi.msc.gbhem</groupId>
    <artifactId>experiment1</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <!-- HlaLib -->
        <dependency>
            <groupId>no.ffi.hlalib</groupId>
            <artifactId>HlaLibEvolved</artifactId>
            <version>4.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>no.ffi.hlalib</groupId>
            <artifactId>HlaLib_RprFom</artifactId>
            <version>2.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>no.ffi.hlalib.llbml</groupId>
            <artifactId>LLBML</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.7</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-ai -->
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-ai</artifactId>
            <version>1.8.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.tinyjee.jgraphx/jgraphx -->
        <dependency>
            <groupId>org.tinyjee.jgraphx</groupId>
            <artifactId>jgraphx</artifactId>
            <version>1.10.1.3</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>RELEASE</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.sf.geographiclib/GeographicLib-Java -->
        <dependency>
            <groupId>net.sf.geographiclib</groupId>
            <artifactId>GeographicLib-Java</artifactId>
            <version>1.49</version>
        </dependency>


    </dependencies>

</project>